--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,19 +1,20 @@
 FROM node:20-alpine AS deps
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci
+RUN npm install
 
 FROM node:20-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-RUN npm run prisma:generate && npm run build
+RUN npm run prisma:generate && npm run build && npm prune --omit=dev
 
 FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/prisma ./prisma
 EXPOSE 3001
-CMD ["npm","run","start:prod"]
+CMD ["node","dist/main.js"]
