--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -7,7 +7,7 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-RUN npm run build && npm prune --omit=dev
+RUN npm run prisma:generate && npm run build && npm prune --omit=dev
 
 FROM node:20-alpine AS runner
 WORKDIR /app
@@ -15,4 +15,5 @@ ENV NODE_ENV=production
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/node_modules ./node_modules
+EXPOSE 9229
 CMD ["node","dist/main.js"]
