--- a/api/package.json
+++ b/api/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "wa-api",
+  "version": "0.2.2",
+  "private": true,
+  "scripts": {
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:prod": "node dist/main.js",
+    "build": "nest build",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy"
+  },
   "dependencies": {
     "@nestjs/common": "10.3.8",
     "@nestjs/config": "3.2.2",
@@ -6,7 +17,7 @@
     "@nestjs/platform-express": "10.3.8",
     "@nestjs/swagger": "7.4.2",
     "@nestjs/axios": "3.0.2",
-    "@nestjs/bullmq": "10.0.1",           // <─ NUEVO
+    "@nestjs/bullmq": "10.0.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "multer": "1.4.5-lts.1",
@@ -22,9 +33,9 @@
     "@nestjs/cli": "10.3.2",
     "@nestjs/schematics": "10.1.1",
     "@nestjs/testing": "10.3.8",
-    "@types/express": "4.17.21",                 // <─ NUEVO
-    "@types/express-serve-static-core": "4.17.43",// <─ NUEVO (por si acaso)
-    "@types/multer": "1.4.7",                    // <─ NUEVO
+    "@types/express": "4.17.21",
+    "@types/express-serve-static-core": "4.17.43",
+    "@types/multer": "1.4.7",
     "@types/node": "20.11.30",
     "typescript": "5.4.5"
   }
