--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wa-api",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": true,
   "scripts": {
     "start": "nest start",
@@ -21,7 +21,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "multer": "1.4.5-lts.1",
-    "bullmq": "5.7.3",
+    "bullmq": "^4.12.0",
     "ioredis": "5.3.2",
     "prisma": "5.15.0",
     "@prisma/client": "5.15.0",
