--- a/worker/package.json
+++ b/worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wa-worker",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": true,
   "scripts": {
     "start": "ts-node src/main.ts",
@@ -12,7 +12,7 @@
     "@nestjs/common": "10.3.8",
     "@nestjs/core": "10.3.8",
     "@nestjs/bullmq": "10.0.1",
-    "bullmq": "5.7.3",
+    "bullmq": "^4.12.0",
     "ioredis": "5.3.2",
     "@prisma/client": "5.15.0",
     "prisma": "5.15.0",
